tests/testcases/errors/BCE0128-1.boo
"""
BCE0128-1.boo(4,1): BCE0128: 'try' block must be followed by either 'except' or 'ensure'.
"""
try:
	print '!'
